[metadata]
name = diffusion-source-identification
version = 1.0
author = Quinn Dawkins
author_email = qed4wg@virginia.edu
description = Package for computing confidence sets on the source of diffusion processes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lab-sigma/Diffusion-Source-Identification
project_urls =
    Bug Tracker = https://github.com/lab-sigma/Diffusion-Source-Identification/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
